﻿PbootCMS V1.1.4 build 2018-06-24
1、修复自定义表单表名重复仍然添加成功问题；
2、修复分享到微信导致页面错误的问题；
3、新增多条件筛选时多选类型支持；
4、新增全站多条件筛选的支持；
5、新增登陆时数据库目录写入权限判断提示；
6、新增后台开启高速静态缓存功能；
7、新增后台填写授权码功能；
8、新增指定列表scode使用逗号调用多个分类功能；
9、新增{pboot:keyword}标签；

PbootCMS V1.1.3 build 2018-06-15
1、优化Sqlite查询过程高并发锁死问题；
2、优化编辑器配置；
3、优化标签参数获取方法；
4、修复部分环境截取描述文本出现乱码问题；
5、修复API搜索数据获取方式错误；
6、新增API获取指定分类子类接口;
7、新增多条件筛选功能；
8、新增无缩略图时自动调用默认图功能；
9、新增上下篇标签参数notext定义"没有了"文本；
10、新增内容管理复制和移动功能；

PbootCMS V1.1.2 build 2018-06-12
1、修复httpurl非标准端口时解析错误；
2、修复内容为空时提取描述报警告问题；
3、修复非根目录情况下图片路径使用IF判断不准问题；
4、修复授权码带空格时导致无法正常匹配问题；
5、修复数据库中存在乱码时读取异常问题；
6、修复面包屑不显示当前分类的问题;
7、修复API中数据调用的一些错误；
8、新增表单数据删除功能；
9、新增栏目自定义路径名称功能；
10、新增留言和自定义表单提交API；

PbootCMS V1.1.1 build 2018-06-03
1、更新Layui到最新版本；
2、修复表备份无数据时处理错误；
3、优化添加自定义字段数据库处理方式；
4、修复修改模型时类型默认不选中问题;
5、修复在单页面多次调用面包屑数据重复问题；
6、修复访客留言不显示问题；
7、新增删除栏目时彻底删除本类及子类内容；
8、修复单页预览按钮地址错误；
9、新增自定义表单功能,调用方法见手册；
10、新增二维码生成标签及当前域名获取标签；
11、新增添加内容时自动提取内容描述文字；
12、新增文件上传过程提示图标；
13、新增数据库管理执行Sql脚本功能；
注意：升级到此版本需要同时升级数据库，脚本见升级包中。

PbootCMS V1.1.0 build 2018-05-24
1、修复新增语言后站点和公司信息图片首次出现警告问题；
2、优化文章访问量计数方式；
3、新增扩展字段编辑器类型；
4、新增后台文章列表有图的标注；
5、修复模板部分手误错误；
6、增强搜索时字段安全性；
7、新增PHP环境自动转义判断；
8、新增总页数、总行数分页标签；
9、调整独立分页标签为不带文字的链接；
10、修复多图多次输出num干扰问题；
11、修复新增语言后未做保存导致手机版切换错误；

PbootCMS V1.0.9 build 2018-05-14
1、新增图片上传直接显示及删除功能；
2、修复内容过滤参数及状态失效问题；
3、优化后台菜单显示视觉流畅性；
4、框架入口文件安全加强；
5、面包屑新增indextext参数，配置"首页"文字；
6、新增API认证签名生成标签，方便进行Ajax加载，具体见手册示例;
7、新增上一篇及下一篇链接及标题独立标签，并支持len截取；

PbootCMS V1.0.8 build 2018-05-07
1、修复后台菜单高亮错误；
2、修改编辑器为不替换div和不自动拉高；
3、修复删除栏目时子类未全部删除问题；
4、新增后台栏目管理折叠功能；
5、新增手机版绑定独立域名功能；
6、修复多语言切换时栏目编码导致报错；
7、修复副栏目内容无法正常调取问题;
8、新增指定内容扩展字段多选输出标签;

PbootCMS V1.0.7 build 2018-05-02
1、采用LayUI新版管理后台；
2、修复后台单页无法显示更多问题；
3、调整默认分页数字条长度为5；
4、修复API调用全部自定义标签错误；
5、新增内容批量删除功能；
6、新增栏目批量删除功能；
7、修复面包屑对外链跳转问题；
8、修复栏目修改直接保存类型错误；
9、其它问题修复和优化；

PbootCMS V1.0.6 build 2018-04-24
1、修复无任何内容执行排序报错；
2、修复可能存在的跨站请求伪造漏洞；

PbootCMS V1.0.5 build 2018-04-23
1、新增后台配置项自动新增功能；
2、修复logo不自适应多级目录路径；
3、新增十类API调用，方便小程序、APP、Ajax等数据获取；
4、修复个别虚拟主机分页代码报警告问题;