@@ -1,4 +1,4 @@
-﻿PbootCMS V1.1.4 build 2018-06-24
+﻿PbootCMS V1.1.4 build 2018-06-25
 1、修复自定义表单表名重复仍然添加成功问题；
 2、修复分享到微信导致页面错误的问题；
 3、新增多条件筛选时多选类型支持；
@@ -8,6 +8,7 @@
 7、新增后台填写授权码功能；
 8、新增指定列表scode使用逗号调用多个分类功能；
 9、新增{pboot:keyword}标签；
+10、新增数据库安全提示及修改功能；
 
 PbootCMS V1.1.3 build 2018-06-15
 1、优化Sqlite查询过程高并发锁死问题；
